--- a/index.css
+++ b/index.css
@@ -18,6 +18,13 @@ body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(113.26% 71.7% at 50% 50%, #FFF 0%, #D1D1D1 100%);
+  display: flex;
+  padding: 80px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
 img, picture, video, canvas, svg {
@@ -40,4 +47,47 @@ a {
 
 ul, ol {
   list-style: none;
+}
+
+section {
+  display: flex;
+  width: 632px;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  border-radius: 8px;
+  border: 1px solid #E4E4E4;
+  background: #FFF;
+}
+
+/* CSS Main */
+
+
+
+.tag-line {
+  color: #8C8C8C;
+  text-align: center;
+  font-family: "Space Mono";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.tag-line-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.conversion-item{
+  width: 100%;
+}
+
+.conversion-header-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
