--- a/index.css
+++ b/index.css
@@ -63,8 +63,58 @@ section {
 
 /* CSS Main */
 
+/* Input Section */
+.yourInputId {
+  display: flex;
+  padding: 12px 16px;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 8px;
+  border: 1px solid #F3F3F3;
+  background: #FFF;
+  color: #2B2B2B;
+  font-family: "Space Grotesk";
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 64px */
+  letter-spacing: -1.92px;
+}
 
+.yourInputId::placeholder {
+  color: #8C8C8C;
+  font-family: "Space Grotesk";
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: -1.92px;
+}
 
+/* Main Button */
+.convert-button {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background: #2B2B2B;
+  color: #F9F8F8;
+  text-align: center;
+  font-family: "Space Grotesk";
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -0.48px;
+  cursor: pointer;
+}
+
+.convert-button:hover {
+  background: #DEDCDC;
+  color: #2B2B2B;
+  transition: all 0.3s ease;
+}
+
+/* Tag Line */
 .tag-line {
   color: #8C8C8C;
   text-align: center;
@@ -83,6 +133,9 @@ section {
 }
 .conversion-item{
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .conversion-header-row {
@@ -91,3 +144,49 @@ section {
   align-items: center;
   width: 100%;
 }
+
+/* Conversion Section */
+
+.conversion-row-container {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+}
+
+.conversion-row-item {
+  display: flex;
+  padding: 16px 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  flex: 1 0 0;
+  border-radius: 4px;
+  background: #FAFAFA;
+}
+
+.chevron-container {
+  display: flex;
+  width: 38px;
+  padding: 12.667px;
+  justify-content: center;
+  align-items: center;
+  gap: 16.889px;
+  border-radius: 100px;
+  border: 4px solid #FFF;
+  background: #FAFAFA;
+  position: absolute;
+  left: 273px;
+  bottom: 21px;
+}
+
+.chevron {
+  width: 32px;
+  height: 32px;
+  stroke-width: 2.111px;
+  stroke: red;
+  flex-shrink: 0;
+}
+
+.conversion-row-value {}
