--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
-  border-radius: 8px;
+  border-radius: 24px;
   border: 1px solid #E4E4E4;
   background: #FFF;
 }
@@ -98,20 +98,25 @@ section {
   align-items: center;
   gap: 16px;
   border-radius: 4px;
-  background: #2B2B2B;
-  color: #F9F8F8;
-  text-align: center;
-  font-family: "Space Grotesk";
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: -0.48px;
+  border: 0.5px solid #D0D0D0;
+  background: #E9E9E9;
   cursor: pointer;
+  transition: all 0.3s ease;
+  color: #484848;
+  text-align: center;
+  font-family: "Space Mono";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 12px */
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
 }
 
 .convert-button:hover {
-  background: #DEDCDC;
-  color: #2B2B2B;
-  transition: all 0.3s ease;
+  background: #2B2B2B;;
+  border: 0.5px solid #4A4949;
+  color: #BBDE88;
 }
 
 /* Tag Line */
@@ -119,7 +124,7 @@ section {
   color: #8C8C8C;
   text-align: center;
   font-family: "Space Mono";
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 100%;
   letter-spacing: 0.3px;
@@ -146,6 +151,13 @@ section {
 }
 
 /* Conversion Section */
+.conversion-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+}
 
 .conversion-row-container {
   position: relative;
@@ -162,14 +174,15 @@ section {
   align-items: flex-start;
   gap: 8px;
   flex: 1 0 0;
-  border-radius: 4px;
+  border-radius: 16px;
   background: #FAFAFA;
 }
 
 .chevron-container {
   display: flex;
   width: 38px;
-  padding: 12.667px;
+  height: 38px;
+  padding: 6px;
   justify-content: center;
   align-items: center;
   gap: 16.889px;
@@ -178,15 +191,24 @@ section {
   background: #FAFAFA;
   position: absolute;
   left: 273px;
-  bottom: 21px;
+  bottom: 19px;
 }
 
-.chevron {
-  width: 32px;
-  height: 32px;
-  stroke-width: 2.111px;
-  stroke: red;
-  flex-shrink: 0;
+.conversion-row-value {
+  color: #3A3A3A;
+  text-align: center;
+  font-family: "Space Mono";
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: -0.54px;
 }
 
-.conversion-row-value {}
+.conversion-row-badge {
+  color: #4A543B;
+  font-family: "Space Mono";
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 100%; /* 10px */
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
