--- a/index.css
+++ b/index.css
@@ -3,28 +3,29 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: none;
 }
 
 html, body {
   height: 100%;
-  width: 100%;
-  font-family: 'Space Grotesk', 'Space Mono', monospace, sans-serif;
-  background: #fff;
-  color: #222;
-  line-height: 1.5;
+  background: radial-gradient(ellipse at center, #fff 0%, #d1d1d1 100%);
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 body {
-  min-height: 100vh;
+  height: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(113.26% 71.7% at 50% 50%, #FFF 0%, #D1D1D1 100%);
   display: flex;
   padding: 80px 0px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   gap: 16px;
+  font-family: 'Space Grotesk', 'Space Mono', monospace, sans-serif;
+  color: #222;
+  line-height: 1.5;
 }
 
 img, picture, video, canvas, svg {
@@ -117,6 +118,16 @@ section {
   background: #2B2B2B;;
   border: 0.5px solid #4A4949;
   color: #BBDE88;
+}
+
+#badge {
+  display: flex;
+  padding: 4px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  border: 0.5px solid #F0F0F0;
+  background: #FFF;
 }
 
 /* Tag Line */
