--- a/index.css
+++ b/index.css
@@ -206,8 +206,9 @@ section {
   border: 4px solid #FFF;
   background: #FAFAFA;
   position: absolute;
-  left: 273px;
-  bottom: 19px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .conversion-row-value {
@@ -227,4 +228,30 @@ section {
   line-height: 100%; /* 10px */
   letter-spacing: 0.5px;
   text-transform: uppercase;
+}
+
+/* Responsive */
+@media (max-width: 725px) {
+  
+  body {
+    display: flex;
+    padding: 40px 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+
+  section {
+    width: 100%;
+    padding: 16px;
+  }
+  .yourInputId {
+    font-size: 48px;
+  }
+
+  .yourInputId::placeholder {
+    font-size: 48px;
+  }
+
 }
